# podology

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  Makefile  Readme.md  __init__.py  app.py  cloud-config.example.yaml  combined-dockerfile  config.py  docker-compose.yml  kfsearch.code-workspace  load.py  main.py  neon-particle-437015-n6-b85680c00ae6.json  podology.code-workspace  pyproject.toml  pyrightconfig.json  reset_eid.sh  sample_long.json  scratch_models.py  scratch_search.py  start-services.sh
.github/workflows/: deploy.yml
data/Test/chunks/: LxvbG_chunks.json  RUkSm_chunks.json  Ug6QC_chunks.json
data/Test/transcripts/: RUkSm.json  Ug6QC.json
design/: .$keywort_research.svg.bkp  .$keywort_research.svg.dtmp  .$result_cards.drawio.svg.bkp  .$result_cards.drawio.svg.dtmp  TODO.md  analyses.org  apis.org  envelopes.drawio  setup.org
kfsearch/: __init__.py  config.py  dashboard.py  main.py
kfsearch/assets/: custom.css  dashAgGridComponentFunctions.js  scroll_sync.js
kfsearch/data/: Episode.py  EpisodeStore.py  Transcript.py  UniqueEpisodeError.py  config.py  html2json.py  models.py  rss.py  speechtotext.py  utils.py
kfsearch/data/connectors/: base.py  rss.py
kfsearch/data/transcribers/: base.py  dummy.py  lemonfox.py  whisperx.py
kfsearch/frontend/: canvas.blend  render.py  results.py  ticker.pickle  utils.py  wordcloud.blend  wordticker.py
kfsearch/search/: search_classes.py  setup_es.py  use_es.py  utils.py
kfsearch/stats/: nlp.py  plotting.py  preparation.py
notebooks/: 0.02-ad-scratch-poe.ipynb  0.03-ad-gg-transcribe.ipynb  0.1-ad-scratch.ipynb  0.2-ad-setup.ipynb  1.2-ad-analysis-bertopic.ipynb
notebooks/.ipynb_checkpoints/: 0.03-ad-gg-transcribe-checkpoint.ipynb
podology/: __init__.py  config.py  dashboard.py
podology/assets/: audio.js  custom.css  scroll_ticker.js  scrolling.js
podology/assets/z_custom/: custom.css
podology/data/: Episode.py  EpisodeStore.py  Transcript.py
podology/data/connectors/: base.py  rss.py
podology/data/transcribers/: base.py  dummy.py  lemonfox.py  transcription_worker.py  whisperx.py
podology/frontend/: canvas.blend  render.py  scrollvid_worker.py  utils.py  wordticker.py
podology/frontend/renderers/: base.py  blender_ticker.py  wordticker.py
podology/search/: elasticsearch.py  search_classes.py  setup_es.py  utils.py
podology/stats/: nlp.py  plotting.py  preparation.py
rss/: Knowledge_Fight.rss
tests/: test_models.py
