[tool.poetry]
name = "podology"
version = "0.1.0"
description = "A research tool that provides a web interface to search, analyze, and visualize podcast contents."
authors = ["Andreas Domberg"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
bs4 = "^0.0.2"
dash = "^2.18.1"
dash-ag-grid = "^31.3.1"
dash-bootstrap-components = "^1.6.0"
elasticsearch = "^8.15.1"
flake8 = "^7.1.1"
flask = "^3.0.3"
jupyter = "^1.1.1"
kaleido = "0.2.1"
loguru = "^0.7.3"
nbconvert = "^7.16.4"
nltk = "^3.9.1"
numpy = "^2.1.1"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
plotly = "^5.24.1"
pocketsphinx = "^5.0.3"
pyarrow = "^19.0.1"
pydub = "^0.25.1"
pylint = "^3.3.6"
pytest = "^8.3.4"
python-dotenv = "^1.0.1"
svgling = "^0.5.0"
transformers = "^4.51.2"
typer = "^0.12.5"
wordcloud = "^1.9.4"
lorem = "^0.1.1"
rq = "^2.3.3"
redis = "^6.1.0"
rq-dashboard = "^0.8.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
